unpackaged/main/default/objects/Maintenance_Assessment__c/Maintenance_Assessment__c.object-meta.xml
<CustomObject>
    <label>Maintenance Assessment</label>
    <nameField>
        <displayFormat>MA - {0000}</displayFormat>
        <label>Maintenance Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maintenance Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>