unpackaged/main/default/objects/Maintenance_Assessment__c/fields/Engine_Oil_Sample_from_Test_Port__c.field-meta.xml
<CustomField>
    <fullName>Engine_Oil_Sample_from_Test_Port__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engine Oil Sample from Test Port</label>
    <type>Checkbox</type>
</CustomField>