unpackaged/main/default/objects/Maintenance_Assessment__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Maintenance Assessments</relationshipLabel>
    <relationshipName>Maintenance_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>