unpackaged/main/default/objects/Maintenance_Assessment__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Maintenance Assessments</relationshipLabel>
    <relationshipName>Maintenance_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>