unpackaged/main/default/objects/Maintenance_Assessment__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Maintenance Assessments</relationshipLabel>
    <relationshipName>Maintenance_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>